--- a/client/js/components/TheWedding/wedding.scss
+++ b/client/js/components/TheWedding/wedding.scss
@@ -1,7 +1,7 @@
 @import "../../../scss/_variables.scss";
 
 .wedding {
-  text-align: center;
+
 }
 
 .wedding__names {
@@ -26,8 +26,12 @@
 }
 
 .wedding__date {
+  display: flex;
+  justify-content: center;
   padding: 24px 12px;
+
   font-size: 24px;
+  text-align: center;
 }
 
 .wedding__from-now {
@@ -41,7 +45,8 @@
 
   padding: 24px 12px;
   font-size: 24px;
-  line-height: 1em;
+  line-height: 1.4em;
+  text-align: center;
 }
 
 .wedding__map-link {
@@ -59,6 +64,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 24px;
+  margin-top: 72px;
+  margin-bottom: 24px;
   max-width: 100%;
 }
